WIP on library#index

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -20,6 +20,7 @@
 .small { font-size: 0.9em !important; }
 
 .mono-font { font-family: monospace; }
+.align-right { text-align: right; }
 
 // Backgrounds
 .alert-border {
