--- a/app/views/nanodrop_quantifications/_form.html.erb
+++ b/app/views/nanodrop_quantifications/_form.html.erb
@@ -36,8 +36,8 @@
     <%= f.text_field :factor %>
   </div>
   <div class="field">
-    <%= f.label :dna_sample_id %><br>
-    <%= f.text_field :dna_sample_id %>
+    <%= f.label :dna_extraction_id %><br>
+    <%= f.text_field :dna_extraction_id %>
   </div>
   <div class="field">
     <%= f.label :sample_type %><br>
