--- a/app/views/nanodrop_quantifications/index.html.erb
+++ b/app/views/nanodrop_quantifications/index.html.erb
@@ -11,7 +11,7 @@
       <th>Absorbance 280</th>
       <th>Absorbance 260</th>
       <th>Factor</th>
-      <th>Dna sample</th>
+      <th>Dna extraction</th>
       <th>Sample type</th>
       <th colspan="3"></th>
     </tr>
@@ -26,7 +26,7 @@
         <td><%= nanodrop_quantification.absorbance_280 %></td>
         <td><%= nanodrop_quantification.absorbance_260 %></td>
         <td><%= nanodrop_quantification.factor %></td>
-        <td><%= nanodrop_quantification.dna_sample %></td>
+        <td><%= nanodrop_quantification.dna_extraction %></td>
         <td><%= nanodrop_quantification.sample_type %></td>
         <td><%= link_to 'Show', nanodrop_quantification %></td>
         <td><%= link_to 'Edit', edit_nanodrop_quantification_path(nanodrop_quantification) %></td>
