--- a/app/views/nanodrop_quantifications/show.html.erb
+++ b/app/views/nanodrop_quantifications/show.html.erb
@@ -31,8 +31,8 @@
 </p>
 
 <p>
-  <strong>Dna sample:</strong>
-  <%= @nanodrop_quantification.dna_sample %>
+  <strong>Dna extraction:</strong>
+  <%= @nanodrop_quantification.dna_extraction %>
 </p>
 
 <p>
