--- a/app/views/qubit_quantifications/show.html.erb
+++ b/app/views/qubit_quantifications/show.html.erb
@@ -56,8 +56,8 @@
 </p>
 
 <p>
-  <strong>Dna sample:</strong>
-  <%= @qubit_quantification.dna_sample %>
+  <strong>Dna extraction:</strong>
+  <%= @qubit_quantification.dna_extraction %>
 </p>
 
 <%= link_to 'Edit', edit_qubit_quantification_path(@qubit_quantification) %> |
