--- a/app/views/samples/index.html.erb
+++ b/app/views/samples/index.html.erb
@@ -2,7 +2,7 @@
   <div class="title">
     <h1>
       <%= fa_icon 'flask', class: 'rotate-on-hover' %>
-      Samples
+      Raw Samples
     </h1>
   </div>
 
@@ -42,7 +42,7 @@
             </td>
             <td><%= sample.id %></td>
             <td><%= sample.patient.full_name %></td>
-            <td><%= safe_join(sample.dna_samples.map{ fa_icon "flask", class: ["grey", "small"] }) %></td>
+            <td><%= safe_join(sample.dna_extractions.map{ fa_icon "flask", class: ["grey", "small"] }) %></td>
             <td><%= sample.institution %></td>
             <td><%= sample.request_date && sample.admission_date.strftime("%-d %b") %></td>
             <td><%= sample.admission_date && sample.admission_date.strftime("%-d %b") %></td>
