--- a/app/views/dna_extractions/new.html.erb
+++ b/app/views/dna_extractions/new.html.erb
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="title">
-    <h1>Create a new Dna Sample</h1>
+    <h1>Create a new Dna Extraction</h1>
   </div>
 </div>
 
