--- a/app/views/qubit_quantifications/_form.html.erb
+++ b/app/views/qubit_quantifications/_form.html.erb
@@ -56,8 +56,8 @@
     <%= f.text_field :far_red_rfu %>
   </div>
   <div class="field">
-    <%= f.label :dna_sample_id %><br>
-    <%= f.text_field :dna_sample_id %>
+    <%= f.label :dna_extraction_id %><br>
+    <%= f.text_field :dna_extraction_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
