--- a/app/views/qubit_quantifications/index.html.erb
+++ b/app/views/qubit_quantifications/index.html.erb
@@ -16,7 +16,7 @@
       <th>Excitation</th>
       <th>Green rfu</th>
       <th>Far red rfu</th>
-      <th>Dna sample</th>
+      <th>Dna extraction</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -35,7 +35,7 @@
         <td><%= qubit_quantification.excitation %></td>
         <td><%= qubit_quantification.green_rfu %></td>
         <td><%= qubit_quantification.far_red_rfu %></td>
-        <td><%= qubit_quantification.dna_sample %></td>
+        <td><%= qubit_quantification.dna_extraction %></td>
         <td><%= link_to 'Show', qubit_quantification %></td>
         <td><%= link_to 'Edit', edit_qubit_quantification_path(qubit_quantification) %></td>
         <td><%= link_to 'Destroy', qubit_quantification, method: :delete, data: { confirm: 'Are you sure?' } %></td>
