--- a/app/views/samples/_sample.html.erb
+++ b/app/views/samples/_sample.html.erb
@@ -1,4 +1,4 @@
-<p>Sample <%= sample.project.tag %>-<%= sample.id %> details:</p>
+<p><%= fa_icon 'flask' %> Sample <%= sample.project.tag %>-<%= sample.id %> details:</p>
 <ul>
   <% if show_full_data %>
     <li>Patient: <%= sample.patient.full_name %></li>
