--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -19,6 +19,15 @@
 .green { color: seaGreen; }
 .small { font-size: 0.9em !important; }
 
+.highlighted {
+  padding: 6px;
+  background-color: deepSkyBlue;
+  color: white;
+  font-size: 1.25em;
+  font-weight: bold;
+  border-radius: 1px;
+}
+
 .mono-font { font-family: monospace; }
 .align-right { text-align: right; }
 
