--- a/app/views/libraries/_form.html.erb
+++ b/app/views/libraries/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@library) do |f| %>
+<%= bootstrap_form_for(@library) do |f| %>
   <% if @library.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@library.errors.count, "error") %> prohibited this library from being saved:</h2>
@@ -12,54 +12,74 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :laboratory %><br>
+    <div class="selectable-dnas">
+
+      <div class="used">
+        <h2 class="title">Used DNAs</h2>
+        <div class="checkbox">
+          <%= collection_check_boxes(:library, :dna_extraction_ids, @dna_extractions[:belong_to_a_library], :id, :description) do |b| %>
+            <%= b.label do %>
+              <%= b.check_box + b.text %>
+            <% end %>
+            <br>
+          <% end %>
+        </div>
+      </div>
+
+      <div class="not-used">
+        <h2 class="title">Unused DNAs</h2>
+        <div class="checkbox">
+          <%= collection_check_boxes(:library, :dna_extraction_ids, @dna_extractions[:dont_belong_to_a_library], :id, :description) do |b| %>
+            <%= b.label do %>
+              <%= b.check_box + b.text %>
+            <% end %>
+            <br>
+          <% end %>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="field">
     <%= f.text_field :laboratory %>
   </div>
   <div class="field">
-    <%= f.label :notes %><br>
     <%= f.text_area :notes %>
   </div>
   <div class="field">
-    <%= f.label :hyp %><br>
     <%= f.text_field :hyp %>
   </div>
   <div class="field">
-    <%= f.label :fpu %><br>
     <%= f.text_field :fpu %>
   </div>
   <div class="field">
-    <%= f.label :pre_pcr_date %><br>
     <%= f.date_select :pre_pcr_date %>
   </div>
   <div class="field">
-    <%= f.label :pcr_date %><br>
     <%= f.date_select :pcr_date %>
   </div>
   <div class="field">
-    <%= f.label :iap %><br>
     <%= f.text_field :iap %>
   </div>
   <div class="field">
-    <%= f.label :clp %><br>
     <%= f.text_field :clp %>
   </div>
   <div class="field">
-    <%= f.label :lnp %><br>
     <%= f.text_field :lnp %>
   </div>
   <div class="field">
-    <%= f.label :sgp %><br>
     <%= f.text_field :sgp %>
   </div>
   <div class="field">
-    <%= f.label :post_pcr_date %><br>
     <%= f.date_select :post_pcr_date %>
   </div>
   <div class="field">
-    <%= f.label :old_id %><br>
     <%= f.text_field :old_id %>
   </div>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit submit_button_text, class: "btn btn-primary" %>
+    <button type="reset" class="btn btn-default">Reset the form</button>
   </div>
 <% end %>
