--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,5 +13,7 @@
  *= require_tree .
  *= require font-awesome
  *= require rails_bootstrap_forms
+ *= require selectize
+ *= require selectize.bootstrap3
  *= require_self
  */
