--- a/app/views/dna_extractions/select_quantification_files.html.erb
+++ b/app/views/dna_extractions/select_quantification_files.html.erb
@@ -10,7 +10,7 @@
 <div class="row">
   <div class="col-sm-12">
     <div class="alert alert-info">
-      Please refer to the IDs in <%= link_to 'samples', samples_path, target: '_blank' %> for the the "Sample ID" field of the quantification files.
+      Please refer to the IDs in <%= link_to 'samples', samples_path, target: '_blank' %> for the "Sample ID" field of the quantification files.
     </div>
 
     <%= form_tag("/dna_extractions/upload_quantification_files", action: :upload, multipart: true) do |f| %>
