--- a/app/views/libraries/edit.html.erb
+++ b/app/views/libraries/edit.html.erb
@@ -3,4 +3,5 @@
   Editing Library
 </h1>
 
-<%= render partial: 'form', locals: { submit_button_text: 'Update the sample' } %>
+<%= render partial: 'form', 
+    locals: { submit_button_text: 'Update the library info' } %>
