--- a/app/views/libraries/new.html.erb
+++ b/app/views/libraries/new.html.erb
@@ -1,6 +1,7 @@
 <h1 class="title">
   <%= fa_icon 'braille' %>
-  Build a new Library
+  Build a new Library (<span id="counter">0</span>)
 </h1>
 
-<%= render partial: 'form', locals: { submit_button_text: 'Create the sample' } %>
+<%= render partial: 'form',
+    locals: { submit_button_text: 'Create the library' } %>
