time ago in words

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -48,7 +48,7 @@
           <div class="accordion-body collapse" id="detail-<%= patient.id %>">
             <div class="padding">
               <p>Samples:</p>
-              <% patient.samples.each do |sample| %>
+              <% patient.samples.decorate.each do |sample| %>
                 <div class="subtle-box">
                   <%= render partial: 'samples/sample',
                       locals: { sample: sample, show_full_data: true } %>
