--- a/app/views/samples/index.html.erb
+++ b/app/views/samples/index.html.erb
@@ -44,8 +44,8 @@
             <td><%= sample.patient.full_name %></td>
             <td><%= safe_join(sample.dna_extractions.map{ fa_icon 'tint', class: ["grey", "small"] }) %></td>
             <td><%= sample.institution %></td>
-            <td><%= sample.request_date && sample.admission_date.strftime("%-d %b") %></td>
-            <td><%= sample.admission_date && sample.admission_date.strftime("%-d %b") %></td>
+            <td><%= sample.request_date_ago %></td>
+            <td><%= sample.admission_date_ago %></td>
             <td class='mono-font'><%= sample.request_category.downcase[0..2] %></td>
           </tr>
 
