--- a/app/views/dna_extractions/index.html.erb
+++ b/app/views/dna_extractions/index.html.erb
@@ -44,7 +44,21 @@
           <div class="accordion-body collapse" id="dna-detail-<%= dna_extraction.id %>">
             <div class="padding">
 
-              <%= render dna_extraction %>
+              <% unless dna_extraction.nanodrop_quantifications.count.zero? %>
+                <table class="table table-bordered table-condensed table-striped quantification">
+                  <% dna_extraction.nanodrop_quantifications.decorate.each do |nanodrop_quantification| %>
+                    <%= render nanodrop_quantification %>
+                  <% end %>
+                </table>
+              <% end %>
+
+              <% unless dna_extraction.qubit_quantifications.count.zero? %>
+                <table class="table table-bordered table-condensed table-striped quantification">
+                  <% dna_extraction.qubit_quantifications.decorate.each do |qubit_quantification| %>
+                    <%= render qubit_quantification %>
+                  <% end %>
+                </table>
+              <% end %>
 
             </div><!-- .padding -->
           </div><!-- accordion-body -->
