--- a/app/views/libraries/_form.html.erb
+++ b/app/views/libraries/_form.html.erb
@@ -14,7 +14,7 @@
   <div class="field">
     <div class="selectable-dnas">
 
-      <div class="used">
+      <div class="group with-scroll">
         <h2 class="title">Used DNAs</h2>
         <div class="checkbox">
           <%= collection_check_boxes(:library, :dna_extraction_ids, @dna_extractions[:belong_to_a_library], :id, :description) do |b| %>
@@ -26,7 +26,7 @@
         </div>
       </div>
 
-      <div class="not-used">
+      <div class="group">
         <h2 class="title">Unused DNAs</h2>
         <div class="checkbox">
           <%= collection_check_boxes(:library, :dna_extraction_ids, @dna_extractions[:dont_belong_to_a_library], :id, :description) do |b| %>
@@ -38,45 +38,64 @@
         </div>
       </div>
 
+      <% if @dna_extractions[:already_selected] %>
+        <div class="group">
+          <h2 class="title">Already selected DNAs</h2>
+          <div class="checkbox">
+            <%= collection_check_boxes(:library, :dna_extraction_ids, @dna_extractions[:already_selected], :id, :description) do |b| %>
+              <%= b.label do %>
+                <%= b.check_box + b.text %>
+              <% end %>
+              <br>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+
     </div>
   </div>
 
-  <div class="field">
-    <%= f.text_field :laboratory %>
-  </div>
-  <div class="field">
-    <%= f.text_area :notes %>
-  </div>
-  <div class="field">
-    <%= f.text_field :hyp %>
-  </div>
-  <div class="field">
-    <%= f.text_field :fpu %>
-  </div>
-  <div class="field">
-    <%= f.date_select :pre_pcr_date %>
-  </div>
-  <div class="field">
-    <%= f.date_select :pcr_date %>
-  </div>
-  <div class="field">
-    <%= f.text_field :iap %>
-  </div>
-  <div class="field">
-    <%= f.text_field :clp %>
-  </div>
-  <div class="field">
-    <%= f.text_field :lnp %>
-  </div>
-  <div class="field">
-    <%= f.text_field :sgp %>
-  </div>
-  <div class="field">
-    <%= f.date_select :post_pcr_date %>
-  </div>
-  <div class="field">
-    <%= f.text_field :old_id %>
-  </div>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="field">
+        <%= f.text_field :laboratory %>
+      </div>
+      <div class="field">
+        <%= f.text_area :notes %>
+      </div>
+      <div class="field">
+        <%= f.date_select :pre_pcr_date %>
+      </div>
+      <div class="field">
+        <%= f.date_select :pcr_date %>
+      </div>
+      <div class="field">
+        <%= f.date_select :post_pcr_date %>
+      </div>
+    </div><!-- .col-sm-6 -->
+
+    <div class="col-sm-6">
+      <div class="field">
+        <%= f.text_field :hyp %>
+      </div>
+      <div class="field">
+        <%= f.text_field :fpu %>
+      </div>
+      <div class="field">
+        <%= f.text_field :iap %>
+      </div>
+      <div class="field">
+        <%= f.text_field :clp %>
+      </div>
+      <div class="field">
+        <%= f.text_field :lnp %>
+      </div>
+      <div class="field">
+        <%= f.text_field :sgp %>
+      </div>
+    </div><!-- .col-sm-6 -->
+  </div><!-- .row -->
+
 
   <div class="actions">
     <%= f.submit submit_button_text, class: "btn btn-primary" %>
