--- a/app/views/libraries/index.html.erb
+++ b/app/views/libraries/index.html.erb
@@ -38,11 +38,11 @@
         <tr class="hidden-row">
           <td colspan="5">
             <div class="accordion-body collapse" id="detail-<%= library.id %>">
-              <div class="padding">
+              <div class="card">
 
                 <%= render library %>
 
-              </div><!-- .padding -->
+              </div><!-- .card -->
             </div><!-- .accordion-body -->
           </td>
         </tr>
