--- a/app/views/sequencings/index.html.erb
+++ b/app/views/sequencings/index.html.erb
@@ -1,15 +1,19 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Sequencings</h1>
+<div class="header">
+  <div class="title">
+    <h1>Sequencings</h1>
+  </div>
+  <div class="actions">
+    <%= link_to 'Set a new sequencing', new_sequencing_path, class: 'btn btn-default' %>
+  </div>
+</div>
 
 <table class='table table-striped table-condensed'>
   <thead>
     <tr>
-      <th>Pal</th>
-      <th>Dal</th>
-      <th>Pre seq date</th>
-      <th>Pre seq notes</th>
+      <th>ID</th>
       <th>Investigator name</th>
+      <th>Pre seq date</th>
+      <th>Pre seq date</th>
       <th>Rcb</th>
       <th>Sample prep kit</th>
       <th>Index reads</th>
@@ -18,36 +22,48 @@
       <th>Cycles reads 2</th>
       <th>Run date</th>
       <th>Notes</th>
-      <th>Old</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @sequencings.each do |sequencing| %>
-      <tr>
-        <td><%= sequencing.pal %></td>
-        <td><%= sequencing.dal %></td>
-        <td><%= sequencing.pre_seq_date %></td>
-        <td><%= sequencing.pre_seq_notes %></td>
+      <!-- Main row -->
+      <tr class="display-row collapsed" data-toggle="collapse"
+          data-target="#detail-<%= sequencing.id %>" class="accordion-toggle">
         <td><%= sequencing.investigator_name %></td>
-        <td><%= sequencing.rcb %></td>
-        <td><%= sequencing.sample_prep_kit %></td>
-        <td><%= sequencing.index_reads %></td>
-        <td><%= sequencing.read_type %></td>
-        <td><%= sequencing.cycles_reads_1 %></td>
-        <td><%= sequencing.cycles_reads_2 %></td>
         <td><%= sequencing.run_date %></td>
-        <td><%= sequencing.notes %></td>
-        <td><%= sequencing.old_id %></td>
-        <td><%= link_to 'Show', sequencing %></td>
-        <td><%= link_to 'Edit', edit_sequencing_path(sequencing) %></td>
-        <td><%= link_to 'Destroy', sequencing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+
+      <!-- Details row -->
+      <tr class="hidden-row">
+        <td colspan="8">
+          <div class="accordion-body collapse" id="detail-<%= sequencing.id %>">
+            <div class="card">
+
+              Hey there seq.
+              <%# render sequencing %>
+              <td><%= sequencing.pal %></td>
+              <td><%= sequencing.dal %></td>
+              <td><%= sequencing.pre_seq_date %></td>
+              <td><%= sequencing.pre_seq_notes %></td>
+              <td><%= sequencing.rcb %></td>
+              <td><%= sequencing.sample_prep_kit %></td>
+              <td><%= sequencing.index_reads %></td>
+              <td><%= sequencing.read_type %></td>
+              <td><%= sequencing.cycles_reads_1 %></td>
+              <td><%= sequencing.cycles_reads_2 %></td>
+              <td><%= sequencing.notes %></td>
+              <td><%= sequencing.old_id %></td>
+              <td><%= link_to 'Show', sequencing %></td>
+              <td><%= link_to 'Edit', edit_sequencing_path(sequencing) %></td>
+              <td><%= link_to 'Destroy', sequencing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+            </div><!-- .card -->
+          </div><!-- accordion-body -->
+        </td>
+      </tr>
+
     <% end %>
   </tbody>
+
 </table>
-
-<br>
-
-<%= link_to 'New Sequencing', new_sequencing_path %>
