implement sequencing#index

--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -30,5 +30,11 @@
 .table-vertical {
   width: auto;
 
-  th { width: 150px; }
+  th {
+    width: 150px;
+    text-align: right;
+  }
+  td {
+    max-width: 300px;
+  }
 }
