--- a/app/views/libraries/_library.html.erb
+++ b/app/views/libraries/_library.html.erb
@@ -50,4 +50,4 @@
     <% @dna_extractions = library.dna_extractions.decorate %>
     <%= render file: 'dna_extractions/index', locals: { omit_header: true } %>
   </div>
-</div><!-- .horizontal-flex>
+</div><!-- .horizontal-flex -->
