--- a/app/views/libraries/index.html.erb
+++ b/app/views/libraries/index.html.erb
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="title">
     <h1>
-      <%= fa_icon 'braille' %>
+      <%= fa_icon 'book' %>
       Libraries
     </h1>
   </div>
