--- a/app/views/libraries/new.html.erb
+++ b/app/views/libraries/new.html.erb
@@ -1,5 +1,5 @@
 <h1 class="title">
-  <%= fa_icon 'braille' %>
+  <%= fa_icon 'eyedropper' %>
   Build a new Library (<span id="counter">0</span>)
 </h1>
 
