--- a/app/views/libraries/edit.html.erb
+++ b/app/views/libraries/edit.html.erb
@@ -1,5 +1,5 @@
 <h1 class="title">
-  <%= fa_icon 'braille' %>
+  <%= fa_icon 'eyedropper' %>
   Editing Library #<%= @library.id %> (<span id="counter"><%= @library.dna_extractions.count %></span>)
 </h1>
 
