--- a/app/views/sequencings/_sequencing.html.erb
+++ b/app/views/sequencings/_sequencing.html.erb
@@ -30,7 +30,7 @@
     <div class="right flex-grow"><!-- Element for the flex -->
       <h2 class="title">DNA Extractions in this sequencing</h2>
       <% @dna_extractions = sequencing.dna_extractions.decorate %>
-      <%= render file: 'dna_extractions/index', locals: { omit_header: true } %>
+      <%= render file: 'dna_extractions/index', locals: { omit_header: true, owner_id: sequencing.id } %>
     </div>
   </div><!-- .horizontal-flex -->
 
