--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -20,3 +20,11 @@
   display: inline-block;
   width: auto;
 }
+
+fieldset {
+  padding-top: 25px;
+  padding-left: 25px;
+  padding-right: 25px;
+  border: 1px solid silver;
+  border-radius: 2px;
+}
