--- a/app/views/samples/_form.html.erb
+++ b/app/views/samples/_form.html.erb
@@ -14,6 +14,37 @@
       <% end %>
 
       <div class="field">
+        <label class="control-label">Select an existing patient</label><br>
+        <%= collection_select(:sample, :patient_id, Patient.all.decorate.reverse,
+                              :id, :select_option,
+                              {prompt: 'Type a name, last name, ID, project tag...'},
+                              {class: 'form-control'}) %>
+
+      </div>
+
+      <div class="field">
+        <label class="control-label">Or create a new patient</label><br>
+                            
+        <fieldset id='patient'>
+          <div class="field">
+            <%= text_field_tag 'patient[first_name]', nil, placeholder: 'Patient first name', class: 'form-control' %>
+          </div>
+          <div class="field">
+            <%= text_field_tag 'patient[last_name]', nil, placeholder: 'Patient last name', class: 'form-control' %>
+          </div>
+          <div class="field">
+            <%= text_field_tag 'patient[acronym]', nil, placeholder: 'Patient acronym', class: 'form-control' %>
+          </div>
+          <div class="field">
+            <div class="rails-bootstrap-forms-date-select">
+              <%= date_select 'patient', 'birthdate', {start_year: 1915, end_year: Date.today.year}, class: 'form-control' %>
+            </div>
+          </div>
+        </fieldset>
+
+      </div>
+
+      <div class="field">
         <label class="control-label">Project</label><br>
         <%= collection_radio_buttons(:sample, :project_id, Project.all, :id, :tag) do |b| %>
           <%= b.label(class: "radio-inline") do %>
@@ -23,17 +54,6 @@
         <% end %>
         <br><br>
         <%= link_to 'Create a new Project', new_project_path,
-            class: "btn btn-default", target: "_blank" %>
-      </div>
-
-      <div class="field">
-        <label class="control-label">Patient</label><br>
-        
-        <%= collection_select(:sample, :patient_id, Patient.all.decorate.reverse,
-                              :id, :select_option,
-                              {prompt: 'Select an existing patient...'},
-                              {class: 'form-control'}) %>
-        <%= link_to 'Create a new patient', new_patient_path,
             class: "btn btn-default", target: "_blank" %>
       </div>
 
