--- a/app/views/samples/edit.html.erb
+++ b/app/views/samples/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Editing sample <%= @sample.name %></h1>
+<h1>Editing sample #<%= @sample.id %></h1>
 
 <%= render partial: 'form', locals: { submit_button_text: 'Update this sample' } %>
